# Role-Unit

./: CLAUDE.md  README.md  checkpoints  logs  pyproject.toml  run.py  run_baseline.py
Datasets/: mmlu_dataset.py
MAR/: __init__.py
MAR/Agent/: agent.py
MAR/Graph/: graph.py
MAR/InfraMind/: length_estimator.py
MAR/LLM/: gpt_chat.py  llm_profile_full.py
MAR/Prompts/: message_aggregation.py  post_process.py
config/: llm_profile_full.json  mmlu_config.yaml  model_costs.json  role_subjects.yaml
context/: project_plan.md  project_summary.md
context/report/: milestone_report.aux  milestone_report.out  milestone_report.tex
scripts/: run_baseline.sh  run_unit_tests.sh  serve_full_pool.sh  serve_model.sh  stop_pool.sh
unit_tests/: analyze.py  run_unit_tests.py
unit_tests/results/job_25614578/: summary.txt
unit_tests/results/job_25626312/: summary_validation.txt
visualization/: plot_results.py
